# File-Explorer-Plus-Plus

./: .gitignore  CMakeLists.txt  File Explorer ++.cpp  File Explorer ++.h  LICENSE  main.cpp
src/: main.cpp
src/core/: AppState.cpp  AppState.h  FileEntry.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  QuickAccess.cpp  QuickAccess.h  TabContext.h
src/ui/: ExplorerTab.cpp  ExplorerTab.h  ExplorerWindow.cpp  ExplorerWindow.h  FileTable.cpp  FileTable.h  IconManager.cpp  IconManager.h  Sidebar.cpp  Sidebar.h  TabBar.cpp  TabBar.h
tests/: FileSystemTests.cpp  IconTests.cpp  QuickAccessTests.cpp  UITests.cpp
